--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "slick-carousel": "^1.8.1"
     },
     "scripts": {
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -45,5 +46,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^3.2.0"
     }
 }
