--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
         }
     ],
     "start_url": "./",
+    "scope": "./",
     "display": "standalone",
     "theme_color": "#1d1d1d",
     "background_color": "#1d1d1d"
