--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,7 @@
             "sizes": "512x512"
         }
     ],
-    "start_url": "./",
-    "scope": "./",
+    "start_url": ".",
     "display": "standalone",
     "theme_color": "#1d1d1d",
     "background_color": "#1d1d1d"
